logs/dag_id=fdic_ncua_staging/run_id=manual__2024-01-12T20:53:12.588514+00:00/task_id=create_staging_ncua_cu_branch_info_temp/attempt=1.log
[2024-01-12T20:53:13.900+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: fdic_ncua_staging.create_staging_ncua_cu_branch_info_temp manual__2024-01-12T20:53:12.588514+00:00 [queued]>
[2024-01-12T20:53:13.910+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: fdic_ncua_staging.create_staging_ncua_cu_branch_info_temp manual__2024-01-12T20:53:12.588514+00:00 [queued]>
[2024-01-12T20:53:13.911+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 1
[2024-01-12T20:53:13.919+0000] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): create_staging_ncua_cu_branch_info_temp> on 2024-01-12 20:53:12.588514+00:00
[2024-01-12T20:53:13.924+0000] {standard_task_runner.py:60} INFO - Started process 9640 to run task
[2024-01-12T20:53:13.928+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'fdic_ncua_staging', 'create_staging_ncua_cu_branch_info_temp', 'manual__2024-01-12T20:53:12.588514+00:00', '--job-id', '108', '--raw', '--subdir', 'DAGS_FOLDER/fdic-ncua-staging.py', '--cfg-path', '/tmp/tmpn0jh0eps']
[2024-01-12T20:53:13.929+0000] {standard_task_runner.py:88} INFO - Job 108: Subtask create_staging_ncua_cu_branch_info_temp
[2024-01-12T20:53:13.966+0000] {task_command.py:423} INFO - Running <TaskInstance: fdic_ncua_staging.create_staging_ncua_cu_branch_info_temp manual__2024-01-12T20:53:12.588514+00:00 [running]> on host c111cf247bc6
[2024-01-12T20:53:14.019+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='fdic_ncua_staging' AIRFLOW_CTX_TASK_ID='create_staging_ncua_cu_branch_info_temp' AIRFLOW_CTX_EXECUTION_DATE='2024-01-12T20:53:12.588514+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-01-12T20:53:12.588514+00:00'
[2024-01-12T20:53:14.020+0000] {sql.py:276} INFO - Executing: CREATE TABLE staging.ncua_cu_branch_info_temp (
    -- pulling from raw.ncua_cu_branch_info
    cu_number NUMERIC, -- NCUA Charter Number
    name TEXT, -- `cu_name`: Credit Union Name
    city TEXT, -- `physical_address_city`: City
    state_code TEXT, -- `physical_address_state_code`: State
    date_updated TEXT, -- `dateupdt`: The date this record was last updated in the NCUA API
    dim_id TEXT PRIMARY KEY, -- MD5 hash of cu_number, name, city, state_code, and date_updated
    loaded_at TIMESTAMP WITH TIME ZONE -- The date the most up-to-date version of this record was loaded into the table
    --created_at TIMESTAMP WITH TIME ZONE DEFAULT NOW()
);

INSERT INTO staging.ncua_cu_branch_info_temp (
    WITH cte1 AS (
        SELECT
            cu_number,
            name,
            city,
            physical_address_state_code,
            dateupdt,
            scraped_at,
            -- get scraped_at and convert to YYYYMMDD format
            to_char(scraped_at, 'YYYYMMDD') AS day_scraped_at
        FROM raw.ncua_credit_union_branch_information
    ),

    -- staging will contain one version of each institution for whatever date it was scraped on
    cte2 AS (
        SELECT
            cu_number,
            name,
            city,
            physical_address_state_code,
            dateupdt,
            day_scraped_at AS scraped_at
        FROM cte1
        GROUP BY
            cu_number,
            name,
            city,
            physical_address_state_code,
            dateupdt,
            day_scraped_at
    ),

    SELECT
        cu_number::NUMERIC,
        name,
        city,
        physical_address_state_code AS state_code,
        dateupdt AS date_updated,
        md5(
            cu_number::TEXT || name || city || physical_address_state_code || dateupdt || scraped_at
        ) AS dim_id,
        NOW()::TIMESTAMP WITH TIME ZONE AS loaded_at,
        scraped_at::DATE AS scraped_at
    FROM cte2
);
[2024-01-12T20:53:14.027+0000] {base.py:83} INFO - Using connection ID 'alpharank_de_eval' for task execution.
[2024-01-12T20:53:14.045+0000] {base.py:83} INFO - Using connection ID 'alpharank_de_eval' for task execution.
[2024-01-12T20:53:14.318+0000] {sql.py:432} INFO - Running statement: CREATE TABLE staging.ncua_cu_branch_info_temp (
    -- pulling from raw.ncua_cu_branch_info
    cu_number NUMERIC, -- NCUA Charter Number
    name TEXT, -- `cu_name`: Credit Union Name
    city TEXT, -- `physical_address_city`: City
    state_code TEXT, -- `physical_address_state_code`: State
    date_updated TEXT, -- `dateupdt`: The date this record was last updated in the NCUA API
    dim_id TEXT PRIMARY KEY, -- MD5 hash of cu_number, name, city, state_code, and date_updated
    loaded_at TIMESTAMP WITH TIME ZONE -- The date the most up-to-date version of this record was loaded into the table
    --created_at TIMESTAMP WITH TIME ZONE DEFAULT NOW()
);

INSERT INTO staging.ncua_cu_branch_info_temp (
    WITH cte1 AS (
        SELECT
            cu_number,
            name,
            city,
            physical_address_state_code,
            dateupdt,
            scraped_at,
            -- get scraped_at and convert to YYYYMMDD format
            to_char(scraped_at, 'YYYYMMDD') AS day_scraped_at
        FROM raw.ncua_credit_union_branch_information
    ),

    -- staging will contain one version of each institution for whatever date it was scraped on
    cte2 AS (
        SELECT
            cu_number,
            name,
            city,
            physical_address_state_code,
            dateupdt,
            day_scraped_at AS scraped_at
        FROM cte1
        GROUP BY
            cu_number,
            name,
            city,
            physical_address_state_code,
            dateupdt,
            day_scraped_at
    ),

    SELECT
        cu_number::NUMERIC,
        name,
        city,
        physical_address_state_code AS state_code,
        dateupdt AS date_updated,
        md5(
            cu_number::TEXT || name || city || physical_address_state_code || dateupdt || scraped_at
        ) AS dim_id,
        NOW()::TIMESTAMP WITH TIME ZONE AS loaded_at,
        scraped_at::DATE AS scraped_at
    FROM cte2
);, parameters: None
[2024-01-12T20:53:14.397+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "SELECT"
LINE 46:     SELECT
             ^

[2024-01-12T20:53:14.406+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=fdic_ncua_staging, task_id=create_staging_ncua_cu_branch_info_temp, execution_date=20240112T205312, start_date=20240112T205313, end_date=20240112T205314
[2024-01-12T20:53:14.415+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 108 for task create_staging_ncua_cu_branch_info_temp (syntax error at or near "SELECT"
LINE 46:     SELECT
             ^
; 9640)
[2024-01-12T20:53:14.427+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-12T20:53:14.451+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
